fea-rs/test-data/compile-tests/mini-latin/bad/script_in_lookup.fea
# script/language is not allowed in standalone lookups
lookup test {
    script latn;
    language lang;
} test;

